--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -36,6 +36,8 @@ all:
   escaping_strategy:      true
   escaping_method:        ESC_SPECIALCHARS
   i18n: true
+  charset: utf-8
   # Enable the database manager
   use_database:           true
+  standard_helpers: [Partial,Cache,I18N]
   
