--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -61,7 +61,7 @@ localized_homepage:
  url:   /:sf_culture/
  param: { module: dashboard, action: index }
  requirements:
-  sf_culture: (?:fr|en|sw|rw)
+  sf_culture: (?:en|fr|rw)
 change_language:
   url:   /change_language
   param: { module: language, action: changeLanguage }
