--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -9,6 +9,10 @@ prod:
  .actions:
   login_module: sfGuardAuth
   login_action: signin
+  #page not found
+  error_404_module:       errors     # module "errors"
+  error_404_action:       error404   # action "executeError404"
+  
 dev:
   .settings:
     error_reporting:        <?php echo (E_ALL | E_STRICT)."\n" ?>
@@ -40,4 +44,7 @@ all:
   # Enable the database manager
   use_database:           true
   standard_helpers: [Partial,Cache,I18N]
+  #403 credential required
+  secure_module:          errors     # module "errors"
+  secure_action:          error403   # action "executeError403"
   
